--- a/web/kaldao-web.html
+++ b/web/kaldao-web.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kaldao Fractal Visualizer</title>
     <!-- Immediate redirect to the actual application -->
-    <meta http-equiv="refresh" content="0; url=kaldao-fractal/">
+    <meta http-equiv="refresh" content="0; url=kaldao-web/">
 </head>
 <body>
     <!-- Fallback for browsers that don't support meta refresh -->
-    <p>Redirecting to <a href="kaldao-fractal/">Kaldao Fractal Visualizer</a>...</p>
+    <p>Redirecting to <a href="kaldao-web/">Kaldao Fractal Visualizer</a>...</p>
 </body>
 </html>
